sdk/gantry-tlm/tests/ui/bad_attr.stderr
error: unknown #[tlm(...)] key on field (expected `unit` or `name`)
 --> tests/ui/bad_attr.rs:6:11
  |
6 |     #[tlm(scale = "2")]
  |           ^^^^^
